ansible/roles/ws-00-vpc-sg/templates/vpc-security-group.yaml
---
# Copyright 2018 widdix GmbH
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
AWSTemplateFormatVersion: '2010-09-09'
Description: 'VPC SecurityGroup for Postgres database'
Metadata:
  'AWS::CloudFormation::Interface':
    ParameterGroups:
    - Label:
        default: 'SG Parameters'
      Parameters:
      - VpcId
Parameters:
  VpcId:
    Description: 'VPC ID'
    Type: String

Resources:
  SecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: !Sub '${AWS::StackName}'
      SecurityGroupIngress:

      - IpProtocol: tcp
        FromPort: 5432
        ToPort: 5432
        CidrIp: '{{sg_cidr}}'

      - IpProtocol: tcp
        FromPort: 3306
        ToPort: 3306
        CidrIp: '{{sg_cidr}}'

      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: '{{sg_cidr}}'

      - IpProtocol: tcp
        FromPort: 443
        ToPort: 443
        CidrIp: '{{sg_cidr}}'

      VpcId: !Sub '${VpcId}'
      Tags:
      - Key: Name
        Value: !Sub '${AWS::StackName}'

Outputs:
  SecurityGroup:
    Description: security group
    Value: !Ref SecurityGroup
    Export:
      Name: !Sub '${AWS::StackName}-SecurityGroup'
